hapi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hapi-pod
  namespace: hapi-ns
spec:
  containers:
  - name: echo
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080
