hapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hapi-service
  namespace: hapi-ns
spec:
  selector:
    app: hapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
