hapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hapi-ingress
  namespace: hapi-ns
spec:
  rules:
    - host: ingress.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hapi-service
                port:
                  number: 8080
